# cmake-get-started

./: .gitignore  Dockerfile  README.md
admin/: all.sh  build.sh  dev.sh  run.sh
app/t1/: CMakeLists.txt  hello  main.c  run.sh
app/t2/: CMakeLists.txt  build.sh  run.sh
app/t2/src/: CMakeLists.txt  main.c
app/t3/: CMakeLists.txt  run.sh
app/t3/lib/: CMakeLists.txt  hello.c  hello.h
app/t4/: CmakeLists.txt  run.sh
app/t4/src/: CmakeLists.txt  main.c
app/t5/: CMakeLists.txt  run.sh
app/t5/src/: CMakeLists.txt  main.c
app/t6/: CMakeLists.txt  run.sh
app/t6/cmake/: FindHELLO.cmake
app/t6/src/: CMakeLists.txt
assets/: aliyun.sources.list
docs/: _gitconfig
