FIND_PACKAGE(HELLO REQUIRED)
IF(HELLO_FOUND)
    ADD_EXECUTABLE(hello-t6 main.c)
    INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
    MESSAGE(STATUS "HELLO_LIBRARY --> " ${HELLO_LIBRARY})
    TARGET_LINK_LIBRARIES(hello-t6 ${HELLO_LIBRARY})
    INSTALL(TARGETS hello-t6 DESTINATION bin)
ENDIF(HELLO_FOUND)